--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Styles/style.css">
+    <script src="Vendors/jquery - 3.6.0 - Production.js"></script>
+    <script src="Scripts/scripts.js"></script>
     <title>Tier2-Week1-GroupStudySession</title>
 </head>
 <body>
     <h1>Tier2 - Week1 - Group Study Session</h1>
     <div id="mainDiv">
-
+        <div id="buttonDiv">
+            <input id="bandaidButton" type="button" value="Add A Bandaid">
+        </div>
+         <div id="addSectionIn">
+        </div>
     </div>
 </body>
 </html>
